--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -128,35 +128,23 @@
 
         <!-- FOOTER -->
 
-        <footer class="bg-dark text-white">
-            <div class="container">
-                <nav class="row">
-                    <a href="#" class="col-12 col-md-3 text-reset text-uppercase d-flex align-items-center justify-content-center">
-            <img src="imagenes/cont.png" alt="Logo weston" class="mr-4">Air Consulting
-                    </a>
-                    <ul class="col-7 col-md-3 list-unstyled d-flex flex-column justify-content-center">
-                        <li class="font-weight-bold text-uppercase">Resource</li>
-                        <li><a href="#" class="text-reset">airconsulting@gmail.com</a></li>
-                        <li><a href="#" class="text-reset">Whatsapp</a></li>
-                        <li><a href="#" class="text-reset">0800-666-3405</a></li>
-                    </ul>
-            
-                    <ul class="col-3 col-md-3 list-unstyled">
-                        <li class="font-weight-bold text-uppercase">Redes Sociales</li>
-                        <li class="d-flex flex-column justify-content-between">
-                        <a href="#" class="text-reset">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="#" class="text-reset">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#" class="text-reset"><i class="fab fa-instagram"></i></a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            
-                </footer>
+        <footer class="footer">
+
+            <a class="titulofooter" href="index.html"><h4>Air Consulting</h4></a>
+
+                    <div class="text-center mt-4 mb-4">
+                        <a href="contacto.html" class="btn btn-primary btn-lg active" role="button">CONTACTO</a>   
+                    </div>
+
+                    <div>
+                    <a class="redesFooter">
+                    <a href="#"><img class="redesFooter" src="https://img.icons8.com/ios/50/000000/facebook--v1.png"/></a>
+                    <a href="#"><img class="redesFooter" src="https://img.icons8.com/ios/50/000000/twitter--v1.png"/></a>
+                    <a href="#"><img class="redesFooter" src="https://img.icons8.com/material-outlined/50/000000/instagram-new--v1.png"/></a>
+                    </div>
+
+
+        </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
 integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
