--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <main>
                 <div class="containerindex">
-                <h1 class="containerindex__tituloIndex containerindex__tituloIndex--caracter">pasión por el comercio</h1>
+                <h1 class="containerindex__tituloIndex containerindex__tituloIndex--caracter">-pasión por el comercio</h1>
                 <div>
                     <p class="containerindex__textoindex containerindex__textoindex--caracter">
                         Asesoramos a empresas en Comercio Internacional, específicamente en trámites y despacho aduanero.
