--- a/servicios.html
+++ b/servicios.html
@@ -105,14 +105,14 @@
     </header>
 
     <main>
-        <div class="container-servicios">
+        <div class="containerServicios">
         <div>
-            <h1 class="container-servicios__titulo-servicios container-servicios__titulo-servicios--caracter">
+            <h1 class="containerServicios__titulo-servicios containerServicios__titulo-servicios--caracter">
                 importación y exportación</h1>
         </div>
         <div>
-            <p class="container-servicios__info-servicios">Nos encargamos de llevar adelante todos los procedimientos
-                aduaneros, de principio a fin, para facilitar el ingreso
+            <p class="containerServicios__info-servicios">Nos encargamos de llevar adelante todos los <span>procedimientos
+                aduaneros</span>, de principio a fin, para facilitar el ingreso
                 y el egreso de su mercadería.</p>
         </div>
     </div>
@@ -133,25 +133,130 @@
     </main>
 
 
-    <!-- FOOTER -->
+   <!-- Footer -->
+   <footer class="page-footer font-small stylish-color-dark pt-4 bg-dark">
 
-    <footer class="footer">
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left">
 
-        <a class="titulofooter" href="index.html"><h4>Air Consulting</h4></a>
+        <!-- Grid row -->
+        <div class="row">
 
-                <div class="text-center mt-4 mb-4">
-                    <a href="contacto.html" class="btn btn-primary btn-lg active" role="button">CONTACTO</a>   
-                </div>
+            <!-- Grid column -->
+            <div class="col-md-4 mx-auto">
 
-                <div>
-                <a class="redesFooter">
-                <a href="#"><img class="redesFooter" src="https://img.icons8.com/ios/50/000000/facebook--v1.png"/></a>
-                <a href="#"><img class="redesFooter" src="https://img.icons8.com/ios/50/000000/twitter--v1.png"/></a>
-                <a href="#"><img class="redesFooter" src="https://img.icons8.com/material-outlined/50/000000/instagram-new--v1.png"/></a>
-                </div>
+                <!-- Content -->
+                <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light text-decoration-underline">nosotros</h5>
+                <p class="text-light">Cientos de empresas y pymes confían en nuestro servicio de asesoramiento año
+                    tras año. Luchamos fervientemente
+                    por satisfacer las necesidades, tanto de nuestros clientes como de nuestros stakeholders. Con
+                    más de 20 años en el rubro, somos la consultora
+                    de comercio Internacional N° 1 de ARGENTINA.
+                </p>
 
+            </div>
+            <!-- Grid column -->
 
-    </footer>
+            <hr class="clearfix w-100 d-md-none">
+
+            <!-- Grid column -->
+            <div class="col-md-2 mx-auto">
+
+                <!-- Links -->
+                <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light text-decoration-underline">web</h5>
+
+                <ul class="list-unstyled">
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="nosotros.html">Nosotros</a>
+                    </li>
+                    <li>
+                        <a href="servicios.html">Servicios</a>
+                    </li>
+                    <li>
+                        <a href="contacto.html">Contacto</a>
+                    </li>
+                </ul>
+
+            </div <!-- GRID COLUMN --!>
+
+            <hr class="clearfix w-100 d-md-none">
+
+            <!-- Grid column -->
+            <div class="col-md-2 mx-auto">
+
+                <!-- Links -->
+                <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light text-decoration-underline">redes</h5>
+
+                <ul class="list-unstyled">
+                    <li>
+                        <a href="http://es-la.facebook.com/" class="btn-floating btn-fb mx-1">
+                            <i class="fab fa-facebook-f"> </i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://twitter.com/" class="btn-floating btn-tw mx-1">
+                            <i class="fab fa-twitter"> </i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://accounts.google.com/" class="btn-floating btn-gplus mx-1">
+                            <i class="fab fa-google-plus-g"> </i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://ar.linkedin.com/" class="btn-floating btn-gplus mx-1">
+                            <i class="fab fa-linkedin"> </i>
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+
+            <!-- Grid column -->
+            <div class="col-md-2 mx-auto">
+
+                <!-- Links -->
+                <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light text-decoration-underline">contacto</h5>
+
+                <ul class="list-unstyled text-decoration-none"">
+            <li>
+              <a href=" contacto.html">airconsultingARG@gmail.com</a>
+                    </li>
+                    <li>
+                        <a href="contacto.html">TEL: (011)1564961598</a>
+                    </li>
+                    <li>
+                </ul>
+
+            </div>
+            <!-- Grid column -->
+
+        </div>
+        <!-- Grid row -->
+
+    </div>
+    <!-- Footer Links -->
+
+    <hr>
+
+    <!-- Call to action -->
+    <ul class="list-unstyled list-inline text-center">
+        <li class="list-inline-item">
+            <h5 class="text-light text-uppercase">inicia sesión!</h5>
+        </li>
+        <li class="list-inline-item">
+            <a href="iniciarsesion.html" class="btn btn-danger btn-rounded text-light">Iniciar Sesión</a>
+        </li>
+    </ul>
+    <!-- Call to action -->
+
+    <hr>
+
+</footer>
+<!-- Footer -->
 
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
