--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -119,32 +119,138 @@
                 </div>
 
                 <div class="buttons text-center">
-                <button type="submit" class="btn btn-primary btn-lg">Iniciar Sesión</button>
-                <button type="submit" class="btn btn-secondary btn-lg">¿Olvidaste contraseña?</button></div>
+                <button type="submit" class="btn btn-secondary btn-lg">¿Olvidaste contraseña?</button>
+                <button type="submit" class="btn btn-primary btn-lg">Iniciar Sesión</button></div>
         </div>
         </form>
         </main>
 
 
-        <!-- FOOTER -->
 
-        <footer class="footer">
+   <!-- Footer -->
+   <footer class="page-footer font-small stylish-color-dark pt-4 bg-dark">
 
-            <a class="titulofooter" href="index.html"><h4>Air Consulting</h4></a>
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left">
 
-                    <div class="text-center mt-4 mb-4">
-                        <a href="contacto.html" class="btn btn-primary btn-lg active" role="button">CONTACTO</a>   
-                    </div>
+        <!-- Grid row -->
+        <div class="row">
 
-                    <div>
-                    <a class="redesFooter">
-                    <a href="#"><img class="redesFooter" src="https://img.icons8.com/ios/50/000000/facebook--v1.png"/></a>
-                    <a href="#"><img class="redesFooter" src="https://img.icons8.com/ios/50/000000/twitter--v1.png"/></a>
-                    <a href="#"><img class="redesFooter" src="https://img.icons8.com/material-outlined/50/000000/instagram-new--v1.png"/></a>
-                    </div>
+            <!-- Grid column -->
+            <div class="col-md-4 mx-auto">
 
+                <!-- Content -->
+                <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light text-decoration-underline">nosotros</h5>
+                <p class="text-light">Cientos de empresas y pymes confían en nuestro servicio de asesoramiento año
+                    tras año. Luchamos fervientemente
+                    por satisfacer las necesidades, tanto de nuestros clientes como de nuestros stakeholders. Con
+                    más de 20 años en el rubro, somos la consultora
+                    de comercio Internacional N° 1 de ARGENTINA.
+                </p>
 
-        </footer>
+            </div>
+            <!-- Grid column -->
+
+            <hr class="clearfix w-100 d-md-none">
+
+            <!-- Grid column -->
+            <div class="col-md-2 mx-auto">
+
+                <!-- Links -->
+                <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light text-decoration-underline">web</h5>
+
+                <ul class="list-unstyled">
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="nosotros.html">Nosotros</a>
+                    </li>
+                    <li>
+                        <a href="servicios.html">Servicios</a>
+                    </li>
+                    <li>
+                        <a href="contacto.html">Contacto</a>
+                    </li>
+                </ul>
+
+            </div <!-- GRID COLUMN --!>
+
+            <hr class="clearfix w-100 d-md-none">
+
+            <!-- Grid column -->
+            <div class="col-md-2 mx-auto">
+
+                <!-- Links -->
+                <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light text-decoration-underline">redes</h5>
+
+                <ul class="list-unstyled">
+                    <li>
+                        <a href="http://es-la.facebook.com/" class="btn-floating btn-fb mx-1">
+                            <i class="fab fa-facebook-f"> </i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://twitter.com/" class="btn-floating btn-tw mx-1">
+                            <i class="fab fa-twitter"> </i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://accounts.google.com/" class="btn-floating btn-gplus mx-1">
+                            <i class="fab fa-google-plus-g"> </i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://ar.linkedin.com/" class="btn-floating btn-gplus mx-1">
+                            <i class="fab fa-linkedin"> </i>
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+
+            <!-- Grid column -->
+            <div class="col-md-2 mx-auto">
+
+                <!-- Links -->
+                <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light text-decoration-underline">contacto</h5>
+
+                <ul class="list-unstyled text-decoration-none"">
+            <li>
+              <a href=" contacto.html">airconsultingARG@gmail.com</a>
+                    </li>
+                    <li>
+                        <a href="contacto.html">TEL: (011)1564961598</a>
+                    </li>
+                    <li>
+                </ul>
+
+            </div>
+            <!-- Grid column -->
+
+        </div>
+        <!-- Grid row -->
+
+    </div>
+    <!-- Footer Links -->
+
+    <hr>
+
+    <!-- Call to action -->
+    <ul class="list-unstyled list-inline text-center">
+        <li class="list-inline-item">
+            <h5 class="text-light text-uppercase">inicia sesión!</h5>
+        </li>
+        <li class="list-inline-item">
+            <a href="iniciarsesion.html" class="btn btn-danger btn-rounded text-light">Iniciar Sesión</a>
+        </li>
+    </ul>
+    <!-- Call to action -->
+
+    <hr>
+
+</footer>
+<!-- Footer -->
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
 integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous">
