--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark p-3">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="https://img.icons8.com/ios/50/000000/around-the-globe.png" alt="logo air consulting"
-                        width="" height="" class="d-inline-block align next-top airtitulo"> AIR CONSULTING
+                    <img src="imagenes/kisspng-globe-computer-icons-earth-world-map-5af42f0f9e3605.801366901525952271648.png"logo air consulting"
+                        width="50px" height="50px" class="d-inline-block align next-top airtitulo"> AIR CONSULTING
                 </a>
+
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
@@ -182,16 +183,16 @@
 
                     <ul class="list-unstyled">
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="index.html" class="text-decoration-none">Home</a>
                         </li>
                         <li>
-                            <a href="nosotros.html">Nosotros</a>
+                            <a href="nosotros.html" class="text-decoration-none">Nosotros</a>
                         </li>
                         <li>
-                            <a href="servicios.html">Servicios</a>
+                            <a href="servicios.html" class="text-decoration-none">Servicios</a>
                         </li>
                         <li>
-                            <a href="contacto.html">Contacto</a>
+                            <a href="contacto.html" class="text-decoration-none">Contacto</a>
                         </li>
                     </ul>
 
@@ -207,22 +208,22 @@
 
                     <ul class="list-unstyled">
                         <li>
-                            <a href="http://es-la.facebook.com/" class="btn-floating btn-fb mx-1">
+                            <a href="http://es-la.facebook.com/" target="_blank"  class="btn-floating btn-fb mx-1">
                                 <i class="fab fa-facebook-f"> </i>
                             </a>
                         </li>
                         <li>
-                            <a href="http://twitter.com/" class="btn-floating btn-tw mx-1">
+                            <a href="http://twitter.com/" target="_blank"  class="btn-floating btn-tw mx-1">
                                 <i class="fab fa-twitter"> </i>
                             </a>
                         </li>
                         <li>
-                            <a href="http://accounts.google.com/" class="btn-floating btn-gplus mx-1">
+                            <a href="http://accounts.google.com/" target="_blank"  class="btn-floating btn-gplus mx-1">
                                 <i class="fab fa-google-plus-g"> </i>
                             </a>
                         </li>
                         <li>
-                            <a href="http://ar.linkedin.com/" class="btn-floating btn-gplus mx-1">
+                            <a href="http://ar.linkedin.com/" target="_blank"  class="btn-floating btn-gplus mx-1">
                                 <i class="fab fa-linkedin"> </i>
                             </a>
                         </li>
@@ -231,17 +232,17 @@
                 </div>
 
                 <!-- Grid column -->
-                <div class="col-md-2 mx-auto">
+                <div class="col-md-4 mx-auto">
 
                     <!-- Links -->
                     <h5 class="font-weight-bold text-uppercase mt-3 mb-4 text-light text-decoration-underline">contacto</h5>
 
-                    <ul class="list-unstyled text-decoration-none"">
+                    <ul class="list-unstyled text-decoration-none foooterList">
                 <li>
-                  <a href=" contacto.html">airconsultingARG@gmail.com</a>
+                <a href=" contacto.html" class="text-decoration-none">airconsultingARG@gmail.com</a>
                         </li>
                         <li>
-                            <a href="contacto.html">TEL: (011)1564961598</a>
+                            <a href="contacto.html" class="text-decoration-none">TEL: (011)1564961598</a>
                         </li>
                         <li>
                     </ul>
@@ -253,23 +254,8 @@
             <!-- Grid row -->
 
         </div>
-        <!-- Footer Links -->
 
-        <hr>
-
-        <!-- Call to action -->
-        <ul class="list-unstyled list-inline text-center">
-            <li class="list-inline-item">
-                <h5 class="text-light text-uppercase">inicia sesión!</h5>
-            </li>
-            <li class="list-inline-item">
-                <a href="iniciarsesion.html" class="btn btn-danger btn-rounded text-light">Iniciar Sesión</a>
-            </li>
-        </ul>
-        <!-- Call to action -->
-
-        <hr>
-
+        
     </footer>
     <!-- Footer -->
 
