--- a/contacto.html
+++ b/contacto.html
@@ -105,7 +105,7 @@
 
         <!-- Inicio del formulario -->
 
-        <!-- <form action="" class="formularios"> -->
+        <form action="" class="formularios">
 
 
         <div class="registro">
@@ -139,17 +139,13 @@
                     <textarea class="textoconsulta" name="" id="" cols="15" rows="5"
                         placeholder="Escribe tu consulta"></textarea>
                 </div>
-                <!-- 
-                <div class="terminos">
-                    <input class="enviar" type="reset" value="Restablecer">
-                    <input class="enviar" type="submit" value="Enviar">
-                </div> -->
+
                 <div class="buttons text-center">
                     <button type="submit" class="btn btn-secondary btn-xs">Reestablecer</button>
                     <button type="submit" class="btn btn-primary btn-xs">Enviar</button></div>
             </div>
 
-            <!-- </form> -->
+            </form>
     </main>
 
 
