--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -110,6 +110,8 @@
 
                 <!-- Inicio de formulario -->
 
+                <form action="" class="formularios">
+
                     <div class="mb-3 d-grid gap-2 col-6 mx-auto formuinicio">
                         <label for="exampleFormControlInput1" class="form-label formuinicio__email formuinicio__email--color">Email address</label>
                         <input type="email" required class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
